--- a/index.html
+++ b/index.html
@@ -28,5 +28,21 @@ background: '/img/bg-index.jpg'
 </section> 
 
 <footer>
- test
+ 
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+
+<script async src=https://www.googletagmanager.com/gtag/js?id=G-R0EBD68SGY></script>
+
+<script>
+
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag(){dataLayer.push(arguments);}
+
+  gtag('js', new Date());
+
+  gtag('config', 'G-R0EBD68SGY');
+
+</script>
+ 
 </footer>
