--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@ title: Home
 layout: default
 background: '/img/bg-index.jpg'
 ---
+ <head>
  
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+
+<script async src=https://www.googletagmanager.com/gtag/js?id=G-R0EBD68SGY></script>
+
+<script>
+
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag(){dataLayer.push(arguments);}
+
+  gtag('js', new Date());
+
+  gtag('config', 'G-R0EBD68SGY');
+
+</script>
+ 
+</head>
 
 <section class="row">
   <div class="col-sm-8"> 
@@ -27,22 +45,4 @@ background: '/img/bg-index.jpg'
   </div>
 </section> 
 
-<footer>
- 
- <!-- Global site tag (gtag.js) - Google Analytics -->
 
-<script async src=https://www.googletagmanager.com/gtag/js?id=G-R0EBD68SGY></script>
-
-<script>
-
-  window.dataLayer = window.dataLayer || [];
-
-  function gtag(){dataLayer.push(arguments);}
-
-  gtag('js', new Date());
-
-  gtag('config', 'G-R0EBD68SGY');
-
-</script>
- 
-</footer>
